fix mobile layout issues

--- a/src/scss/landingpage.scss
+++ b/src/scss/landingpage.scss
@@ -253,6 +253,7 @@
         font-size: 24px;
 
         .landing-button {
+          min-width: 100%;
           width: 100%;
           font-size: 18px;
         }
