--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -26,8 +26,9 @@
 }
 
 .sidebar-logo {
+  padding-bottom: 1.2em !important;
   margin-top: 1em;
-  border-radius: 20px;
+  border-bottom: none;
   width: 100%;
 
   img {
